# Udacity-Cpp-Nanodegree-Capstone-Project

./: CMakeLists.txt  README.md
config/: parameters.txt
src/: app.cpp  config_io.cpp  config_io.h  detector.cpp  detector.h  display.cpp  display.h  main.cpp  video_processing.cpp  video_processing.h  video_source.cpp  video_source.h
